fix(VariablesForm): add max-height and overflow-y: auto

--- a/styles/morpher.less
+++ b/styles/morpher.less
@@ -7,3 +7,8 @@
 .tooltip.morpher-above-panel {
   z-index: 99999;
 }
+
+.morpher-variables .morpher-variables-fields {
+  max-height: 300px;
+  overflow-y: auto;
+}
